# raycasting_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  cub3D  cub3D1  main.c
cub3D1.dSYM/Contents/: Info.plist
engine/: action.c  calculations.c  initialisations.c  loops_and_hooks.c  raycasting.c  rendering.c  screenshot.c  sprite_calculation_and_rendering.c  texture_capturing.c  wall_detection_00.c  wall_detection_01.c  work_with_images.c  work_with_ray.c
includes/: cub3d.h  utils.h
maps/: map.cub  map1.cub
minilibx/: mlx.h.gch
parsing/: color_parsing.c  config_parsing_utils.c  free_parsed.c  map_validation_00.c  map_validation_01.c  parsing.c  player_parsing.c  resolution_parsing.c
srcs/: main.c
srcs/engine/: calculations.c  initialisations.c  program_arguments_checking.c  raycasting.c  rendering.c  screenshot.c  sprite_calculation_and_rendering.c  sprite_utils.c  texture_capturing.c  work_with_images.c
srcs/parsing/: config_parsing_utils.c  map_parsing.c  map_validation_00.c  map_validation_01.c  parsing.c  player_parsing.c  sprite_parsing.c  texture_parsing.c
srcs/utils/: ft_atoi.c  (+5 more)
textures/: ahegao.xpm  cat.xpm  catto.xpm  ceil1.xpm  ceil2.xpm  ceil3.xpm  ceil4.xpm  cul.xpm  doggo.xpm  doggo2.xpm  doggo3.xpm  doggo_and_cat.xpm  friend_doggo.xpm  metal_barrel.xpm  police_doggo.xpm  selfie_catto.xpm  wall1h.xpm  wall1v.xpm  wall2h.xpm  wall2v.xpm  wall3h.xpm  wall3v.xpm  wall4h.xpm  wall4v.xpm
utils/: Makefile  ft_bzero.c  ft_strdup_with_border.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  get_next_line.c  program_arguments_checking.c  utils.h
(+4 files in other folders)
